# video-editor

./: .gitignore  AGENTS.md  AI_Video_Editing_Single_Engine_Guideline.md  Cargo.toml  KAIPAI_FORMULA_ADAPTER_RESEARCH.md  LICENSE  README.md  README.zh-CN.md  ROADMAP_PHASES_11_13_ARCHIVE.md  justfile  package.json  pnpm-lock.yaml
crates/adapter_kaipai/: Cargo.toml
crates/adapter_kaipai/src/: compatibility_report.rs  error.rs  formula_bundle.rs  lib.rs  mapper.rs  resource_localizer.rs
crates/adapter_kaipai/tests/: compatibility_report.rs  draft_v2_gap_inventory.rs  fixtures.rs  formula_bundle_contract.rs  mapper.rs  mapper_fixtures.rs  resource_localizer.rs  resource_localizer_contract.rs  schema_exports.rs
crates/artifact_store/: Cargo.toml
crates/artifact_store/src/: blob_store.rs  dependencies.rs  error.rs  fingerprint.rs  gc.rs  generation.rs  invalidation.rs  jobs.rs  lib.rs  manifest.rs  paths.rs  quota.rs  resource_index.rs  schema.rs
crates/artifact_store/tests/: artifact_generation.rs  artifact_jobs.rs  blob_store.rs  gc_quota_manifest.rs  invalidation.rs  resource_index.rs  sqlite_schema.rs
crates/audio_engine/: Cargo.toml
crates/audio_engine/src/: dsp_timeline.rs  lib.rs  mix_intent.rs  output.rs  session.rs  telemetry.rs
crates/audio_engine/tests/: audio_session_generation.rs  dsp_timeline.rs
crates/audio_output_desktop/: Cargo.toml
crates/audio_output_desktop/src/: cpal_output.rs  lib.rs  mock_output.rs
crates/audio_output_desktop/tests/: audio_output_capabilities.rs  native_audio.rs
crates/bindings_c/: Cargo.toml  cbindgen.toml
crates/bindings_c/include/: video_editor_runtime.h
crates/bindings_c/src/: lib.rs
crates/bindings_c/tests/: abi_smoke.rs  mobile_contract_handles.rs
crates/bindings_node/: Cargo.toml
crates/bindings_node/src/: artifact_store_service.rs  audio_service.rs  lib.rs  material_service.rs  native_preview_presenter.rs  preview_export_service.rs  project_session_service.rs  realtime_preview_service.rs  runtime_capability_service.rs  task_runtime_service.rs  timeline_selection.rs
crates/bindings_node/tests/: artifact_store_commands.rs  audio_service.rs  binding_smoke.rs  canvas_commands.rs  export_commands.rs  keyframe_commands.rs  material_service.rs  preview_commands.rs  project_interaction_session.rs  project_session.rs  project_session_import_kaipai.rs  runtime_capabilities.rs  scheduler_artifact_probe.rs  scheduler_export.rs  scheduler_preview_audio.rs  scheduler_runtime.rs  text_commands.rs  transform_commands.rs
crates/draft_import/: Cargo.toml
crates/draft_import/src/: adaptation_report.rs  import_plan.rs  lib.rs  resource_localizer.rs  validation.rs
crates/draft_import/tests/: adaptation_report.rs  import_plan.rs  resource_localizer.rs  schema_exports.rs
crates/draft_model/: Cargo.toml
crates/draft_model/src/: canvas.rs  delta.rs  draft.rs  effects.rs  font_registry.rs  ids.rs  interaction.rs  lib.rs  material.rs  time.rs  timeline.rs  validation.rs
crates/draft_model/tests/: canvas_config.rs  contract.rs  draft_fixtures.rs  draft_schema.rs  font_registry.rs  production_effects_contracts.rs  schema_exports.rs
crates/editor_runtime/: Cargo.toml
crates/editor_runtime/src/: error.rs  export.rs  handles.rs  lib.rs  material_service.rs  project_session.rs  project_session_node.rs  session.rs
crates/editor_runtime/tests/: handle_registry.rs  project_session_runtime.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: frame_state.rs  lib.rs  normalize.rs  text_layout.rs  time_mapping.rs
crates/engine_core/tests/: canvas_profile.rs  frame_state_snapshots.rs  normalization.rs  retiming.rs
crates/ffmpeg_compiler/: Cargo.toml
crates/ffmpeg_compiler/src/: ass.rs  effects.rs  filters.rs  job.rs  lib.rs
crates/ffmpeg_compiler/tests/: ass_snapshots.rs  canvas_profile_snapshots.rs  capability_snapshots.rs  ffmpeg_job_snapshots.rs  production_effects.rs  transform_snapshots.rs
crates/media_runtime/: Cargo.toml
crates/media_runtime/src/: capabilities.rs  color.rs  decoder.rs  discovery.rs  error.rs  fallback.rs  frame.rs  job.rs  lib.rs  media_io.rs  probe.rs  process.rs  texture.rs  validate.rs
crates/media_runtime/tests/: discovery.rs  export_job.rs  fallback_reasons.rs  frame_pool.rs  material_probe.rs  media_io_contracts.rs  output_validation.rs  process.rs  runtime_capability.rs
crates/media_runtime_desktop/: Cargo.toml
crates/media_runtime_desktop/src/: capabilities.rs  ffmpeg_fallback.rs  lib.rs
crates/media_runtime_desktop/tests/: capabilities.rs  fallback_ladder.rs  ffmpeg_fallback.rs  macos_media_io.rs  session_leaks.rs  windows_media_io.rs
crates/preview_service/: Cargo.toml
crates/preview_service/src/: cache.rs  lib.rs  realtime_backend.rs  realtime_frame_provider.rs  service.rs
crates/preview_service/tests/: cache_invalidation.rs  cancellation_telemetry.rs  canvas_profile.rs  dirty_propagation.rs  fallback_ladder.rs  preview_generation.rs  realtime_backend_no_ffmpeg.rs  realtime_video_material.rs
crates/project_store/: Cargo.toml
crates/project_store/src/: bundle.rs  error.rs  lib.rs  paths.rs
crates/project_store/tests/: project_bundle.rs
crates/realtime_preview_runtime/: Cargo.toml
crates/realtime_preview_runtime/src/: capabilities.rs  clock.rs  diagnostics.rs  effects.rs  fallback.rs  frame_provider.rs  graph_prepare.rs  lib.rs  media_io_adapter.rs  parity.rs  request.rs  scheduler.rs  session.rs  software_video_provider.rs  telemetry.rs
crates/realtime_preview_runtime/tests/: cancellation_telemetry.rs  capability_matrix.rs  clock_generation.rs  frame_provider.rs  gpu_subset.rs  gpu_surface_presenter.rs  media_io_handoff.rs  offscreen_compositor.rs  parity_diagnostics.rs  production_effects.rs  stale_frame_rejection.rs  text_parity.rs  texture_cache.rs  video_frame_provider.rs
crates/render_graph/: Cargo.toml
crates/render_graph/src/: effects.rs  fingerprint.rs  graph.rs  incremental.rs  lib.rs  profile.rs
crates/server_runtime/: Cargo.toml
crates/server_runtime/src/: lib.rs  (+1 more)
crates/task_runtime/: Cargo.toml
crates/testkit/: Cargo.toml
(+1077 files in other folders)
