[workspace]
members = [
  "crates/draft_model",
  "crates/draft_commands",
  "crates/engine_core",
  "crates/render_graph",
  "crates/ffmpeg_compiler",
  "crates/media_runtime",
  "crates/media_runtime_desktop",
  "crates/project_store",
  "crates/preview_service",
  "crates/adapter_kaipai",
  "crates/testkit",
  "crates/bindings_node",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "UNLICENSED"

[workspace.metadata.video-editor]
planned-members = []
