[workspace]
members = [
  "crates/draft_model",
  "crates/draft_import",
  "crates/adapter_kaipai",
  "crates/draft_commands",
  "crates/engine_core",
  "crates/render_graph",
  "crates/task_runtime",
  "crates/realtime_preview_runtime",
  "crates/audio_engine",
  "crates/audio_output_desktop",
  "crates/ffmpeg_compiler",
  "crates/media_runtime",
  "crates/media_runtime_desktop",
  "crates/artifact_store",
  "crates/project_store",
  "crates/preview_service",
  "crates/testkit",
  "crates/editor_runtime",
  "crates/bindings_node",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "MIT"

[workspace.metadata.video-editor]
planned-members = []
