[package]
name = "artifact_store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.5"
fs2 = "0.4.3"
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
draft_model = { path = "../draft_model" }
tempfile = "3.27.0"
