[package]
name = "audio_output_desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
audio_engine = { path = "../audio_engine" }
cpal = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
