[package]
name = "bindings_node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
media_runtime = { path = "../media_runtime" }
napi = { version = "3.9.2", features = ["serde-json"] }
napi-derive = "3.5.6"
project_store = { path = "../project_store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
media_runtime_desktop = { path = "../media_runtime_desktop" }
tempfile = "3.27.0"
testkit = { path = "../testkit" }

[build-dependencies]
napi-build = "2.3.2"
