[package]
name = "bindings_node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
draft_commands = { path = "../draft_commands" }
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
ffmpeg_compiler = { path = "../ffmpeg_compiler" }
media_runtime = { path = "../media_runtime" }
media_runtime_desktop = { path = "../media_runtime_desktop" }
napi = { version = "3.9.2", features = ["serde-json"] }
napi-derive = "3.5.6"
preview_service = { path = "../preview_service" }
project_store = { path = "../project_store" }
realtime_preview_runtime = { path = "../realtime_preview_runtime" }
render_graph = { path = "../render_graph" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

tempfile = "3.27.0"
testkit = { path = "../testkit" }

[build-dependencies]
napi-build = "2.3.2"
