[package]
name = "bindings_node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
adapter_kaipai = { path = "../adapter_kaipai" }
artifact_store = { path = "../artifact_store" }
audio_engine = { path = "../audio_engine" }
audio_output_desktop = { path = "../audio_output_desktop" }
blake3 = "1.8.5"
draft_commands = { path = "../draft_commands" }
draft_import = { path = "../draft_import" }
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
editor_runtime = { path = "../editor_runtime" }
ffmpeg_compiler = { path = "../ffmpeg_compiler" }
media_runtime = { path = "../media_runtime" }
media_runtime_desktop = { path = "../media_runtime_desktop" }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
napi = { version = "3.9.2", features = ["serde-json"] }
napi-derive = "3.5.6"
preview_service = { path = "../preview_service" }
project_store = { path = "../project_store" }
realtime_preview_runtime = { path = "../realtime_preview_runtime" }
render_graph = { path = "../render_graph" }
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
task_runtime = { path = "../task_runtime" }
wgpu = "29.0.3"

tempfile = "3.27.0"
testkit = { path = "../testkit" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-av-foundation = { version = "0.3.2", features = ["objc2-core-media"] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["objc2-metal"] }
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"

[build-dependencies]
napi-build = "2.3.2"
