[package]
name = "draft_import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
serde_json = "1.0.150"
