[package]
name = "draft_model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
