[package]
name = "editor_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
project_store = { path = "../project_store" }
serde = { version = "1.0.228", features = ["derive"] }
task_runtime = { path = "../task_runtime" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
