[package]
name = "editor_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
adapter_kaipai = { path = "../adapter_kaipai" }
artifact_store = { path = "../artifact_store" }
draft_commands = { path = "../draft_commands" }
draft_import = { path = "../draft_import" }
draft_model = { path = "../draft_model" }
media_runtime = { path = "../media_runtime" }
media_runtime_desktop = { path = "../media_runtime_desktop" }
project_store = { path = "../project_store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
task_runtime = { path = "../task_runtime" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
