[package]
name = "ffmpeg_compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
render_graph = { path = "../render_graph" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
engine_core = { path = "../engine_core" }
serde_json = "1.0.150"
