[package]
name = "media_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
which = "8.0.4"

[dev-dependencies]
media_runtime_desktop = { path = "../media_runtime_desktop" }
tempfile = "3.27.0"
