[package]
name = "media_runtime_desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
media_runtime = { path = "../media_runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-av-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-metal = "0.3.2"
objc2-video-toolbox = "0.3.2"
