[package]
name = "preview_service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
artifact_store = { path = "../artifact_store" }
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
ffmpeg_compiler = { path = "../ffmpeg_compiler" }
media_runtime = { path = "../media_runtime" }
realtime_preview_runtime = { path = "../realtime_preview_runtime" }
render_graph = { path = "../render_graph" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
