[package]
name = "project_store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
