[package]
name = "realtime_preview_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
render_graph = { path = "../render_graph" }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "29.0.3"

[dev-dependencies]
testkit = { path = "../testkit" }
