[package]
name = "realtime_preview_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
media_runtime = { path = "../media_runtime" }
render_graph = { path = "../render_graph" }
task_runtime = { path = "../task_runtime" }
fontdue = "0.9.3"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "29.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSGraphics"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFAttributedString", "CFDictionary", "CFNumber", "CFString", "CFURL"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGAffineTransform", "CGBitmapContext", "CGColor", "CGColorSpace", "CGContext", "CGImage"] }
objc2-core-text = { version = "0.3.2", features = ["CTFont", "CTFontManager", "CTLine", "CTStringAttributes", "objc2-core-graphics"] }
objc2-core-video = { version = "0.3.2", features = ["objc2-metal"] }
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
objc2-quartz-core = "0.3.2"

[dev-dependencies]
testkit = { path = "../testkit" }
