[package]
name = "render_graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
