[package]
name = "server_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
editor_runtime = { path = "../editor_runtime" }

[dev-dependencies]
draft_model = { path = "../draft_model" }
project_store = { path = "../project_store" }
tempfile = "3.23.0"
