[package]
name = "server_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
editor_runtime = { path = "../editor_runtime" }
media_runtime = { path = "../media_runtime" }
project_store = { path = "../project_store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
media_runtime_desktop = { path = "../media_runtime_desktop" }
testkit = { path = "../testkit" }
tempfile = "3.23.0"
