[package]
name = "task_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
draft_model = { path = "../draft_model" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
