[package]
name = "testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
audio_engine = { path = "../audio_engine" }
draft_model = { path = "../draft_model" }
engine_core = { path = "../engine_core" }
ffmpeg_compiler = { path = "../ffmpeg_compiler" }
media_runtime = { path = "../media_runtime" }
media_runtime_desktop = { path = "../media_runtime_desktop" }
preview_service = { path = "../preview_service" }
project_store = { path = "../project_store" }
render_graph = { path = "../render_graph" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"

[dev-dependencies]
adapter_kaipai = { path = "../adapter_kaipai" }
draft_import = { path = "../draft_import" }
realtime_preview_runtime = { path = "../realtime_preview_runtime" }
